--- a/NetworkScannerScapy.ipynb
+++ b/NetworkScannerScapy.ipynb
@@ -2,20 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa70af85-f638-4ea5-bc06-208be08c19dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# importing libraries\n",
+    "\n",
+    "from scapy.all import ARP, Ether, srp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a5432e-990f-4b5c-bb29-53268ed3467f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_ip = \"192.168.1.1/24\"\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
