adding ip and mac addresses to the cllients list

--- a/NetworkScannerScapy.ipynb
+++ b/NetworkScannerScapy.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "02bf3fc2-b644-4a02-9a57-d26ea27af05a",
    "metadata": {},
    "outputs": [
@@ -57,13 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0fff1baf-ef0c-4690-9e9d-f3b17b4254ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "# a list of clients that will be filled in the upcoming loop\n",
-    "clients = []"
+    "clients = []\n",
+    "\n",
+    "for sent, received in result:\n",
+    "    # for each response, append ip and mac address to 'clients' list\n",
+    "    clients.append({'ip':received.psrc,'mac':received.hwsrc})"
    ]
   }
  ],
