--- a/NetworkScannerScapy.ipynb
+++ b/NetworkScannerScapy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "fa70af85-f638-4ea5-bc06-208be08c19dd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "11a5432e-990f-4b5c-bb29-53268ed3467f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "02bf3fc2-b644-4a02-9a57-d26ea27af05a",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "0fff1baf-ef0c-4690-9e9d-f3b17b4254ea",
    "metadata": {},
    "outputs": [],
@@ -69,6 +69,38 @@
     "    # for each response, append ip and mac address to 'clients' list\n",
     "    clients.append({'ip':received.psrc,'mac':received.hwsrc})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fe8f6338-ba4f-4d35-9eea-ef5f6360cf46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available devices in the network: \n",
+      "IP                  MAC\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print clients list\n",
+    "print(\"Available devices in the network: \")\n",
+    "print(\"IP\" + \" \"*18 + \"MAC\")\n",
+    "\n",
+    "for client in clients:\n",
+    "    print(\"{:16}    {}\".format(client['ip'], client['mac']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602004c0-8137-4497-aac4-0b896b918cde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
